--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 <body>
   <div class="parent">
-    <div class="child1"></div>
-    <div class="child2"></div>
+    <div class="child1">
+      <h1>hello</h1>
+    </div>
+    <div class="child2">
+      <p>hello2</p>
+    </div>
     <div class="child3"></div>
     <div class="child4"></div>
   </div>
