--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="child3">
       <h1>Three</h1>
     </div>
-    <div class="child4">
+    <!-- <div class="child4">
       <h1>Four</h1>
-    </div>
+    </div> -->
   </div>
 
 </body>
